# result-evaluator

./: .gitignore  README.md  README_RESULT_EVALUATOR.md  TUTORIAL.md  pyproject.toml  pyrightconfig.json
src/dsl/: __init__.py  models.py  parser.py
src/result_evaluator/: __init__.py
src/result_evaluator/dsl/: __init__.py  models.py  parser.py
src/result_evaluator/runtime/: __init__.py  config.py  engine.py  llm.py  operators.py  query.py
src/runtime/: __init__.py  engine.py  operators.py
tests/: __init__.py  fixtures.py  test_async_workflow_integration.py  test_dsl_config_field.py  test_engine.py  test_engine_async.py  test_engine_sync_backward_compat.py  test_eval_assert_async.py  test_llm.py  test_llm_config_load.py  test_llm_exceptions.py  test_llm_logging.py  test_llm_operator.py  test_llm_successful_calls.py  test_main.py  test_mock_fixtures.py  test_models.py  test_operators.py  test_query.py  test_serialization.py
tutorial/: .gitignore  __init__.py  demo_standalone.py  jsonl_formatter.py  logging_config.py  ollama.env  product_categories.py  run_evaluator.py  run_tutorial.sh
tutorial/dataset/: 01-semantic-match.yaml  02-exact-match.yaml  03-negative-case.yaml  04-variant-wording.yaml
